--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,10 +22,9 @@ Suggests:
 Imports: 
     dplyr,
     readr,
-    readxl,
     magrittr,
-    vroom,
     utils,
-    here
+    here,
+    tidycensus
 Depends: 
     R (>= 2.10)
