--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,10 +21,11 @@ Suggests:
     testthat
 Imports: 
     dplyr,
-    readr,
+    stringr,
+    tidyr,
     magrittr,
     utils,
     here,
-    tidycensus
+    censusapi
 Depends: 
     R (>= 2.10)
