--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: This package provides functions for predicting an individual’s
     characteristics to generate posterior probabilities for each individual.
 License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: false
+LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Suggests:
@@ -31,4 +31,4 @@ Imports:
     here,
     censusapi
 Depends: 
-    R (>= 2.10)
+    R (>= 4.0)
